Ignore BroadcastChannel::postMessage from detached iframe / closing worker contexts https://bugs.webkit.org/show_bug.cgi?id=232693

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Resync BroadcastChannel WPT tests from upstream to gain test coverage.

* web-platform-tests/webmessaging/broadcastchannel/basics.any.serviceworker.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/cross-origin-expected.txt: Added.
* web-platform-tests/webmessaging/broadcastchannel/cross-origin.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/detached-iframe-expected.txt: Added.
* web-platform-tests/webmessaging/broadcastchannel/detached-iframe.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/ordering-expected.txt: Added.
* web-platform-tests/webmessaging/broadcastchannel/ordering.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/resources/cross-origin.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/resources/ordering.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/resources/service-worker.js: Added.
* web-platform-tests/webmessaging/broadcastchannel/resources/w3c-import.log:
* web-platform-tests/webmessaging/broadcastchannel/resources/worker.js:
(handler):
* web-platform-tests/webmessaging/broadcastchannel/service-worker.https-expected.txt: Added.
* web-platform-tests/webmessaging/broadcastchannel/service-worker.https.html: Added.
* web-platform-tests/webmessaging/broadcastchannel/w3c-import.log:
* web-platform-tests/webmessaging/broadcastchannel/workers-expected.txt:
* web-platform-tests/webmessaging/broadcastchannel/workers.html:

Source/WebCore:

Ignore BroadcastChannel::postMessage from detached iframe / closing worker contexts:
- https://html.spec.whatwg.org/#eligible-for-messaging

Tests: imported/w3c/web-platform-tests/webmessaging/broadcastchannel/basics.any.serviceworker.html
       imported/w3c/web-platform-tests/webmessaging/broadcastchannel/cross-origin.html
       imported/w3c/web-platform-tests/webmessaging/broadcastchannel/detached-iframe.html
       imported/w3c/web-platform-tests/webmessaging/broadcastchannel/ordering.html
       imported/w3c/web-platform-tests/webmessaging/broadcastchannel/service-worker.https.html

* dom/BroadcastChannel.cpp:
(WebCore::BroadcastChannel::postMessage):
(WebCore::BroadcastChannel::dispatchMessage):
(WebCore::BroadcastChannel::isEligibleForMessaging const):
* dom/BroadcastChannel.h:



Canonical link: https://commits.webkit.org/244027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285503 268f45cc-cd09-0410-ab3c-d52691b4dbfc