Source/WebCore/dom/BroadcastChannel.cpp
@@ -180,6 +180,9 @@ String BroadcastChannel::name() const
 
 ExceptionOr<void> BroadcastChannel::postMessage(JSC::JSGlobalObject& globalObject, JSC::JSValue message)
 {
+    if (!isEligibleForMessaging())
+        return { };
+
     if (m_isClosed)
         return Exception { InvalidStateError, "This BroadcastChannel is closed" };
 
@@ -225,6 +228,9 @@ void BroadcastChannel::dispatchMessageTo(BroadcastChannelIdentifier channelIdent
 
 void BroadcastChannel::dispatchMessage(Ref<SerializedScriptValue>&& message)
 {
+    if (!isEligibleForMessaging())
+        return;
+
     if (m_isClosed)
         return;
 
@@ -247,6 +253,19 @@ void BroadcastChannel::eventListenersDidChange()
 bool BroadcastChannel::virtualHasPendingActivity() const
 {
     return !m_isClosed && m_hasRelevantEventListener;
+}
+
+// https://html.spec.whatwg.org/#eligible-for-messaging
+bool BroadcastChannel::isEligibleForMessaging() const
+{
+    auto* context = scriptExecutionContext();
+    if (!context)
+        return false;
+
+    if (is<Document>(*context))
+        return downcast<Document>(*context).isFullyActive();
+
+    return !downcast<WorkerGlobalScope>(*context).isClosing();
 }
 
 } // namespace WebCore
